# gentrade-back

./: .cursorrules  .cursorrules__  .gitignore  Dockerfile  Focus.md  README.md  alembic.ini  cursorrules.md  db_reset.sh  docker-compose.yml  langgraph.json  project_filestructure.txt  pyproject.toml
.cursor/rules/: plan_act.mdc  planning.mdc
app/: celery_app.py  celery_async.py  config.py  dependencies.py  main.py
app/agents/: model.py
app/agents/main/: graph_main.py  schemas.py
app/agents/strategy/: graph_strategy.py  graph_strategy_code.py  graph_strategy_draft.py  schemas.py
app/agents/utils/: logging.py
app/celery/: celery_async.py  celery_rmq_connector.py
app/db/: db.py
app/db/migrations/: env.py
app/db/models/: __init__.py  _common.py  backtests.py  (+3 more)
app/dependencies/: celery.py
app/middleware/: logging.py
app/schemas/: schema_backtests.py  schema_chats.py  schema_clerk_webhook_event.py  schema_exchanges.py  schema_freqtrade_config.py  schema_strategies.py  schema_user_settings.py  schema_users.py
app/tasks/: __init__.py  backtests.py  base.py
app/util/: exceptions.py  ft_backtesting.py  ft_strategies.py  ft_userdir.py  logger.py
documentation/: app_flow_document.md  backend_structure_document.md  coding_style_guide.md  data_download.md  dev_plan.md  project_requirements_document.md  tech_stack_document.md
documentation/tasks/: correlation_id_fix.md  data_download_verification.md  ft_backtest_parsing_task.md  logging_feature.md  user_settings_endpoint_plan.md  user_settings_scheme.md
documentation/templates/: template_design_doc.md
(+70 files in other folders)
